# Nginx_Flask

Flask-MySQL/mysql_Flask/: gconf.py  models.py  views.py
Flask-MySQL/mysql_Flask/templates/: bodys.html  bodys.html.bak  delete.html  error.html  increase.html  index.html  login.html  select.html  update.html  user.html
Flask-Nginx/: handle.py  logfile.py
Flask-Nginx/templates/: js.html  log.html  login2.html
LearningData/py脚本/: XLWatchDog.sh  ZabbixAPI.py  csv_test.py  hitime.sh  host  hosts.py  lazysql.py  models.py  monitor_hosts.py  process.py  sms.py  tcp.sh  tcp_port.sh
LearningData/学习文档/: CMakeLists.txt  DDOS攻击处理流程.docx  RabbitMQ队列.md  django的类的视图.txt  初始化.txt
LearningData/学习文档/elk安装文档/: elk安装配置步骤.txt
LearningData/学习文档/elk安装文档/配置文件/: Gruntfile.js  app.js  elastic_stack.ini  elasticsearch.yml  kibana.yml  logstash-simple.conf  supervisord  supervisord.conf
LearningData/学习文档/kvm/: 192.168.10.9KVM.md
LearningData/学习文档/openstack相关/: openstack镜像.txt  公司内部私有云搭建.txt
LearningData/学习文档/saltstack/: salt-api使用.txt
LearningData/学习文档/zabbix/: zabbix-3.2.3+php-5.6.29+percona-server-5.6.29-76.2+nginx-1.10.2(CentOS6.5).docx
Monitor/: salt1.py  saltAPI.py  zabbix_agentd.conf
Monitor/key/: init.sls  port.sh
Monitor/limits/: limits.conf
Monitor/script/: mysqlbak.sh  test.py
Monitor/tomcat/: init.sls
Monitor/zbx/: class_zabbix.py  class_zabbix_graph.py  my.cnf  zabbix.py  zabbix_agentd.conf.bak
py/: geo.py  logg.py  moniter.py
py/11_test/: CentOS-7.1-x86_64.cfg  argsg.py  cssͬ-Â.css  geo.py  htmlͬ-Â.html  jieduan.py  moniter.py  page_list.py  ssh_util.py  test_add.py  test_argv.py  test_log.py  utils.py
py/Flask-cmdb-v1.1/: runserver.py
py/Flask-cmdb-v1.1/assets/: models.py  views.py
py/Flask-cmdb-v1.1/assets/static/css/: jquery.gritter.css  sty1.css  sty_color.css  style_juli.css
py/Flask-cmdb-v1.1/assets/templates/: assets.html
py/Flask-cmdb-v1.1/loganalysis/: views.py
py/Flask-cmdb-v1.1/loganalysis/static/css/: user1.css
py/Flask-cmdb-v1.1/loganalysis/templates/: Loganalysis.html
py/Flask-cmdb-v1.1/login/: views.py
py/Flask-cmdb-v1.1/login/static/css/: style_juli.css
py/Flask-cmdb-v1.1/login/templates/: bodys.html  bodys.html.bak  bodys_old.html  bodys_v1.1_source.html  login.html  new_bodys.html
py/Flask-cmdb-v1.1/saltstack/: gconf.py
py/Flask-cmdb-v1.1/saltstack/static/css/: demo.css  sty1.css
py/Flask-cmdb-v1.1/saltstack/static/js/: matrix.js
py/Flask-cmdb-v1.1/saltstack/templates/: editor.html  installation.html
py/Flask-cmdb-v1.1/static/css/: matrix-style.css  sty.css
py/Flask-cmdb-v1.1/static/js/: sweetalert.min.js
py/Flask-cmdb-v1.1/templates/: bodys.html.bak  bodys_test.html
py/Flask-cmdb-v1.1/usermanagement/: views.py
py/Flask-cmdb-v1.1/usermanagement/static/css/: sty_color.css  style_juli.css
py/Flask-cmdb-v1.1/usermanagement/static/js/: ie-emulation-modes-warning.js
py/Flask-cmdb-v1.1/usermanagement/templates/: usermanagement.html
py/Flask-cmdb-v1.1/zabbix/: class_zabbix_graph.py  views.py  zabbix_API.py
py/Flask-cmdb-v1.1/zabbix/static/css/: matrix-login.css
py/Flask-cmdb-v1.1/zabbix/templates/: zabbixmoniter.html
py/Flask-cmdb/assets/: page_list.py  views.py
py/Flask-cmdb/assets/static/css/: sweetalert.css
py/Flask-cmdb/assets/templates/: assets.html  bodys.html.matadmin  select.html
py/Flask-cmdb/loganalysis/: models.py
py/Flask-cmdb/loganalysis/static/css/: sty1.css
py/Flask-cmdb/login/: models.py  views.py
py/Flask-cmdb/login/templates/: bodys.html  salt-zabbix.txt
py/Flask-cmdb/saltstack/: saltapi.py  views.py
py/Flask-cmdb/saltstack/static/css/: body.css
py/Flask-cmdb/templates/: bodys.html.kk
py/Flask-cmdb/usermanagement/: models.py  views.py
py/Flask-cmdb/usermanagement/templates/: usermanagement.html
py/Flask-cmdb/zabbix/: models.py
py/Flask-cmdb/zabbix/static/css/: font-awesome.css  fullcalendar.css  matrix-media.css
py/Flask-cmdb/zabbix/templates/: moniter - ©¦¦¥.html  moniter.html
zabbix/: css知识.css  denyhosts.sh  fixssh.sh  html知识.html  mysqlbak.sh  nginx.conf  nrpe.sh  snmpd.conf  sysctl.sh  test.py  user.sh  zabbix_server.conf
zabbix/key/: zabbix_agentd.conf
zabbix/limits/: init.sls
zabbix/omsa/: init.sls  omsa.sh
zabbix/script/: Redmine.sh
zabbix/script/log/: email.txt
zabbix/snmp/: init.sls
zabbix/tomcat/: .bash_profile  tomcat
zabbix/usermonitor/: init.sls
zabbix/zabbix/: Flask.sql  geoip.py  init.sls  moniter.py
zabbix/zabbix/practice/: 5_day_work3.py  day3.py  day3_2.py  day5.py  day5_1.py  nginxtop_10.py  top10.py  zuo.3_three.py
zabbix/zabbix/practice/Flask-Nginx/: handle.py
zabbix/zabbix/practice/Flask-Nginx/templates/: login.html
